--- a/index.html
+++ b/index.html
@@ -7,22 +7,42 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	   <meta name="viewport" content="width=device-width, initial scale=1.0">
         <link type="text/css" rel="stylesheet" href="styles.css"/>
-        <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+        <link type="text/css" rel="stylesheet"\ href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="script.js"></script>
+        <script>window.twttr = (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0],
+            t = window.twttr || {};
+          if (d.getElementById(id)) return t;
+          js = d.createElement(s);
+          js.id = id;
+          js.src = "https://platform.twitter.com/widgets.js";
+          fjs.parentNode.insertBefore(js, fjs);
+
+          t._e = [];
+          t.ready = function(f) {
+            t._e.push(f);
+          };
+
+          return t;
+        }(document, "script", "twitter-wjs"));</script>
     </head>
     
     <body>
         <div class="page-wrapper">
             <div class="container title">
-                <h1>Random Quotes Machine</h1>
+                <h1>Nerdy Chuck Norris<br>Quotes Machine</h1>
             </div>
             <div class="container">
                 <span id="generate">Generate</span>
             </div>
             <div class="container quote-container">
-                <div id="quote-box">Lorem ipsum bla bla.</div>
+                <div id="quote-box"></div>
+            </div>
+            <div class="tweet">
+                <span id="tweet-button" href="http://twitter.com/share">
+                    <i class="fa fa-twitter" style="margin-right: 4px"></i>Tweet</a>
             </div>
         </div>
     </body>
